fixed WebdavServlet sonarqube